--- a/prova.html
+++ b/prova.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
         <meta charset=" UTF-8">
         <meta name="viewport" content="= width=device-width, initial-scale=1.0">
         <title> Document</title>
-        <link rel="stylesheet" href="./prova.css">
-    </head>
-    <body>
-        <div>div</div>
-    </body>
-    </html>
+        <link rel="stylesheet" href="prova.css">
+</head>
+<body>
+        <div>Div</div>
+</body>
+</html>
